  - New features
  - Tutorials
  - Bug fixed
    . [18748] Ogre and wireframe resources not found after ViSP installation
    . [18823] vpMatrix::kernel method returns false result if matrix has
      less rows than columns
    . [18939] vpParseArgv::ARGV_CONSTANT segfault
    . [19312] Model-based tracker unable to initialize the number of cylinder
      or circle from cao file

----------------------------------------------
ViSP 2.10.0 (released February 13th, 2015)
  - New features
    . New object detection and localisation capabilities that allow to
      initialize for instance the model-based tracker (see tutorial).
    . New bar code detectors that uses libdmtx and libzbar (see tutorial):
      + vpDetectorQRcode class allows to detect QR codes
      + vpDetectorDataMatrixCode class allows to detect data matrices
    . New vpDetectorFace class that allows face detection based on OpenCV
      Haar cascade classifier capabilities (see tutorial)
    . New vpConvert class for type conversions from OpenCV to ViSP.
    . Model-based tracker:
      + Introduction of 3D circles that project as ellipses.
      + In *.cao files comments are allowed on lines starting with # character.
      + New functions getError() and getRobustWeights() useful to compute
        tracking quality indicators.
      + Introduction of setLod() for "level of detail" that checks if the size
        of the feature is large enough to be considered by the tracker.
      + Based on the rank of the interaction matrix turn off automatically the
        degrees of freedom that cannot be estimated. Especially useful when
        considering 3D objets with only cylinders and circles.
      + and many other improvements and fixes.
    . Video reader and writer support mpeg4. ffmpeg is no more requested
      in vpVideoReader and vpVideoWriter. If ffmpeg is not detected or installed
      we use OpenCV.
    . New vpXmlParserHomogeneousMatrix class to read/write homogeneous