@@ -16,6 +16,7 @@ ViSP 3.0.0 (under development)
     . [18939] vpParseArgv::ARGV_CONSTANT segfault
     . [19312] Model-based tracker unable to initialize the number of cylinder
       or circle from cao file
+    . [19326] segfault when using vpDisplayX::init(unsigned int, unsigned int, ...)
 
 ----------------------------------------------
 ViSP 2.10.0 (released February 13th, 2015)
